--- a/apps/templates/home/Add_location.html
+++ b/apps/templates/home/Add_location.html
@@ -29,7 +29,7 @@
                 <!-- Province Selection -->
                 <div class="col-lg-6">
                     <div class="form-group">
-                        <label class="form-control-label" for="provincename">Enter Province:</label>
+                        <label class="form-control-label" for="province">Enter Province:</label>
                         {{ form.province|add_class:"form-control" }}
                     </div>
                 </div>
