--- a/apps/templates/home/Breakpoints.html
+++ b/apps/templates/home/Breakpoints.html
@@ -112,10 +112,20 @@
             </div>
             
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <div class="form-group">
                     <label class="form-control-label" for="Whonet_Abx" >Whonet Abx</label>
                     <input id="Whonet_Abx" class="form-control " value="{{breakpoint.Whonet_Abx}}"   type="text" name="Whonet_Abx"/>
+                </div></div>
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label class="form-control-label" for="Alert_val" >Alert Value</label>
+                    <input id="Alert_val" class="form-control " value="{{breakpoint.Alert_val}}"   type="text" name="Alert_val"/>
+                </div></div>
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label class="form-control-label" for="Alert_cln" >Alert Clean</label>
+                    <input id="Alert_val" class="form-control " value="{{breakpoint.Alert_cln}}"   type="text" name="Alert_cln"/>
                 </div></div>
             </div>
             
