--- a/apps/templates/home/GS_result.html
+++ b/apps/templates/home/GS_result.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gram Stain Report</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,7 +18,7 @@
             padding: 1px;
         }
         td{
-            padding: 2px;
+            padding: 1px;
         }
         .header-table td {
             border: none;
@@ -39,6 +38,7 @@
             border-top: 2px solid black;
             padding-top: 3px;
         }
+
     </style>
 </head>
 <body class="container mt-4">
@@ -59,41 +59,42 @@
     <!-- Patient Information -->
     <table>
         <tr>
-            <td colspan="2" style="text-align: right;"><strong>UIC/PTID:</strong></td>
-            <td colspan="2">{{isolate.Uic_Ptid}}</td>
-            <td colspan="2" style="text-align: right;"><strong>EGASP ID:</strong></td>
+            <td colspan="2" style="text-align: left;"><strong>UIC/PTID:</strong></td>
+            <td colspan="2" >{{isolate.Uic_Ptid}}</td>
+            <td colspan="2" style="text-align: left;"><strong>EGASP ID:</strong></td>
             <td colspan="2">{{isolate.Egasp_Id}}</td>
         </tr>
         <tr>
-            <td colspan="2" style="text-align: right;"><strong>Last Name:</strong></td>
-            <td colspan="2">{{isolate.Last_Name}}</td>
-            <td colspan="2" style="text-align: right;"><strong>Specimen Date:</strong></td>
+            <td colspan="2" style="text-align: left;"><strong>Last Name:</strong></td>
+            <td colspan="2" >{{isolate.Last_Name}}</td>
+            <td colspan="2" style="text-align: left;"><strong>Specimen Date:</strong></td>
             <td colspan="2">{{isolate.Date_Specimen_Collection}}</td>
         </tr>
         <tr>
-            <td colspan="2" style="text-align: right;"><strong>First Name:</strong></td>
-            <td colspan="2">{{isolate.First_Name}}</td>
-            <td colspan="2" style="text-align: right;"><strong>Date Received:</strong></td>
+            <td colspan="2" style="text-align: left;"><strong>First Name:</strong></td>
+            <td colspan="2" >{{isolate.First_Name}}</td>
+            <td colspan="2" style="text-align: left;"><strong>Date Received:</strong></td>
             <td colspan="2">{{isolate.Date_Received_in_lab}}</td>
         </tr>
         <tr>
-            <td colspan="2" style="text-align: right;"><strong>Middle Name:</strong></td>
-            <td colspan="2">{{isolate.Middle_Name}}</td>
-            <td colspan="2" style="text-align: right;"><strong>Specimen Type:</strong></td>
+            <td colspan="2" style="text-align: left;"><strong>Middle Name:</strong></td>
+            <td colspan="2" >{{isolate.Middle_Name}}</td>
+            <td colspan="2" style="text-align: left;"><strong>Specimen Type:</strong></td>
             <td colspan="2">{{isolate.Specimen_Type}}</td>
         </tr>
         <tr>
-            <td colspan="2" style="text-align: right;"><strong>Age:</strong></td>
+            <td colspan="2" style="text-align: left;"><strong>Age:</strong></td>
             <td colspan="2">{{isolate.Age}}</td>
-            <td colspan="2" style="text-align: right;"><strong>Sex:</strong></td>
+            <td colspan="2" style="text-align: left;"><strong>Sex:</strong></td>
             <td colspan="2">{{isolate.Sex}}</td>
         </tr>
     </table>
     <br>
     <!-- Gram Stain Result -->
-    
+
     <table >
-        <tr><td style="text-align: center; font-size: 16px;" class="details" colspan="8"><h5>GRAM STAIN RESULT</h5></td></tr>
+        <tr><td style="text-align: left; font-size: 14px; padding-top: 10px;" class="details" colspan="8" ><h5>GRAM STAIN RESULT</h5></td></tr>
+        <tr></tr>
         <tr><td colspan="4"><strong> Pus Cells:</strong></td><td colspan="4" style="text-decoration: underline;">{{isolate.GS_Pus_Cells}}</td></tr>
         <tr><td colspan="4"><strong>Epithelial Cells:</strong></td>  <td colspan="4" style="text-decoration: underline;">{{isolate.Epithelial_Cells}}</td></tr>
         <tr><td colspan="4"><strong>Gram Negative Intracellular Diplococci:</strong></td> <td colspan="4" style="text-decoration: underline;">{{isolate.Gram_Neg_Intracellular}}</td></tr>
@@ -102,26 +103,133 @@
     </table>
     <br>
     <br>
-    <!-- Signatures -->
     <table>
-        <tr>
-            <td class="no-border" style="text-align: center;">
-                <strong class="signature-name">Marietta L. Lagrada, RMT</strong><br>
-                <em>Medical Technologist</em>
-            </td>
-            <td class="no-border" style="text-align: center;">
-                <strong class="signature-name">Sonia B. Sia, MD</strong><br>
-                <em>Head, ARSRL</em>
-            </td>
-        </tr>
+              <thead>
+                <tr>
+                    <th colspan="8" style="text-align: left; font-size: 14px;">
+                        CULTURE AND ANTIMICROBIAL SUSCEPTIBILITY TEST RESULT
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr></tr>
+                <tr>
+                    <td colspan="2" style="text-align: center;">Organism:</td>
+                    {% if isolate.Culture_Result == "Positive" %}
+                    <td colspan="6" style="text-align: left;"> <u> <i>Positive for Neisseria gonorrhoeae</i> after {{ isolate.Growth|safe }} hrs. of incubation</u></td>
+                    {%else%}
+                    <td colspan="6" style="text-align: left;"><u>No <i>Neisseria gonorrhoeae</i> isolated after {{ isolate.Growth|safe }} hrs. of incubation </u></td>
+                    {% endif %}
+                </tr>
+            </tbody>
     </table>
     <br>
-    <!-- Footer -->
-    <table>
+            <table >
+            {% if isolate.Culture_Result == "Positive" %}
+                <thead>
+                <tr>
+                    <th scope="col" style="border: 1px solid gray;">ANTIBIOTIC</th>
+                    <th scope="col" style="border: 1px solid gray;">TEST METHOD</th>
+                    <th scope="col" style="border: 1px solid gray;">ANTIBIOTIC RESULT</th>
+                    <th scope="col" style="border: 1px solid gray;">INTERPRETATION</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for entry in antibiotic_entries %}
+                    {% if entry.ab_Disk_value or entry.ab_MIC_value %}
+                    <tr>
+                        <td style="text-align: center; border: 1px solid gray;"><strong>{{ entry.ab_Antibiotic}}</strong></td> 
+                        {% if entry.ab_Disk_value %} 
+                        <td style="text-align: center;border: 1px solid gray;">DISK (mm)</td>
+                        <td style="text-align: center;border: 1px solid gray;">{{ entry.ab_Disk_value }}</td>
+                        <td style="text-align: center;border: 1px solid gray;">{{ entry.ab_Disk_RIS }}</td>
+                        {% else %}
+                        <td style="text-align: center;border: 1px solid gray;">MIC (ug/mL)</td>
+                        <td style="text-align: center;border: 1px solid gray;">{{ entry.ab_MIC_operand }}{{ entry.ab_MIC_value }}</td>
+                        <td style="text-align: center;border: 1px solid gray;">{{ entry.ab_MIC_RIS }}</td>
+                        {% endif %}
+                      
+                    </tr>
+                 
+                    {% endif %}
+                {% endfor %}
+                </tbody>
+            {% else %}
+                <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+          
+            
+                </tr>
+                </tbody>
+            {% endif %}
+            </table>
+
+
+
+
+    <br>
+    <br>
+
+    
+   
+    
+
+<!-- Signatures -->
+    <table table style="border: 0.5pt solid gray; border-collapse: collapse; width: 100%;">
+        <thead>
+            <th colspan="2">Date Released</th>
+            <th colspan="2">Performed by:</th>
+            <th colspan="2">Validated by:</th>
+            <th colspan="2">Noted by:</th>
+        </thead>
+        <br>
+        <br>
+        <tbody>
         <tr>
-            <td class="no-border" style="font-size: 10px;"><strong>Date Released:</strong> {{isolate.Date_Released}}</td>
+            <td colspan="2" style="text-align: center;">{{isolate.Date_Released}}</td>
+            <td style="text-align: center;" colspan="2" >
+                <strong class="signature-name"><br><br>Jaywardeen P. Abad, RMT</strong><br>
+                <span style="font-size: 10px;">License Number: 0042797</span> <br>
+                <span style="font-size: 10px;">Medical Technologist</span>
+            </td>
+            <td style="text-align: center;" colspan="2">
+                 <strong class="signature-name"><br><br>Manuel C. Jamoralin Jr., RMT</strong><br>
+                <span style="font-size: 10px;"> License Number: 0032847 </span> <br>
+                <span style="font-size: 10px;"> Medical Technologist </span>
+            </td>
+            <td style="text-align: center;" colspan="2">
+                <strong class="signature-name"><br><br>Sonia B. Sia, MD</strong><br>
+                <span style="font-size: 10px;" >License Number: 0083194</span> <br>
+                <span style="font-size: 10px;">Head, ARSRL</span>
+            </td>
         </tr>
+        </tbody>
     </table>
+<br>
+<table>
+    
+    <tr>
+        <td colspan="6"></td>
+        <td colspan="2" style="text-align: right;"><img src="{% static 'assets/img/brand/tuv.png' %}" alt="TUV rheinland" /></td>
+    </tr>
+</table>
+
   
 </body>
 </html>
