--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -38,7 +38,7 @@
                         <div class="row">
                             <div class="col">
                                 <h5 class="card-title text-uppercase text-muted mb-0">Total Records</h5>
-                                <span class="h2 text-muted mb-0">{{ record_count }}</span>
+                                <span class="fs-6 text-muted " style="font-size: 25px;"> <b>{{ record_count }}</b></span>
                             </div>
                             <div class="col-auto">
                                 <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
@@ -56,8 +56,11 @@
                     <div class="card-body d-flex flex-column justify-content-between">
                         <div class="row">
                             <div class="col">
-                                <h5 class="card-title text-uppercase text-muted mb-0">Total Clinics</h5>
-                                <span class="h2 text-muted mb-0">{{ clinic_count }}</span>
+                                <h5 class="card-title text-uppercase text-muted mb-0">Clinic Count</h5>
+                              
+                                <span class="fs-6 text-muted ">TLY: &nbsp; <b>{{ tly_count }}</b></span> <br>
+                                <span class="fs-6 text-muted ">PSH: &nbsp; <b>{{ psh_count }}</b></span> <br>
+                                <span class="fs-6 text-muted ">TSH: &nbsp; <b>{{ tsh_count }}</b></span>
                             </div>
                             <div class="col-auto">
                                 <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
@@ -76,8 +79,8 @@
                         <div class="row">
                             <div class="col">
                                 <h5 class="card-title text-uppercase text-muted mb-0">Gender Count</h5>
-                                <span class="fs-6 text-muted d-block">Male: {{ male_count }}</span>
-                                <span class="fs-6 text-muted d-block">Female: {{ female_count }}</span>
+                                <span class="fs-6 text-muted d-block">Male: <b>{{ male_count }}</b></span>
+                                <span class="fs-6 text-muted d-block">Female: <b> {{ female_count }} </b></span>
                             </div>
                             <div class="col-auto">
                                 <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
@@ -98,19 +101,19 @@
                                 <h5 class="card-title text-uppercase text-muted mb-0">Count per Age</h5>
                                 <div class="d-flex justify-content">
                                     <span class="text-muted">0-18:</span>&nbsp;&nbsp;
-                                    <span class="text-muted">{{ age_0_18 }}</span>
+                                    <span class="text-muted"> <b>{{ age_0_18 }}</b></span>
                                 </div>
                                 <div class="d-flex justify-content">
                                     <span class="text-muted">19-35:</span>&nbsp;&nbsp;
-                                    <span class="text-muted">{{ age_19_35 }}</span>
+                                    <span class="text-muted"><b>{{ age_19_35 }}</b></span>
                                 </div>
                                 <div class="d-flex justify-content">
                                     <span class="text-muted">36-60:</span>&nbsp;&nbsp;
-                                    <span class="text-muted">{{ age_36_60 }}</span>
+                                    <span class="text-muted"><b>{{ age_36_60 }}</b></span>
                                 </div>
                                 <div class="d-flex justify-content">
                                     <span class="text-muted">60+:</span>&nbsp;&nbsp;
-                                    <span class="text-muted">{{ age_60_plus }}</span>
+                                    <span class="text-muted"><b>{{ age_60_plus }}</b></span>
                                 </div>
                             </div>
                             <div class="col-auto">
