--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -27,7 +27,7 @@
   </title>
 
   <!-- Favicon - loaded as static -->
-  <link rel="icon" href="/static/assets/img/brand/favicon.png" type="image/png">
+  <link rel="icon" href="/static/assets/img/brand/virus.png" type="image/png">
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
 
@@ -45,6 +45,30 @@
 
   <!-- Specific CSS goes HERE -->
   
+<style>
+/* Default layout */
+#sidenav-main {
+  width: 250px;
+  transition: width 0.3s ease;
+}
+
+#panel {
+  margin-left: 250px;
+  transition: margin-left 0.3s ease;
+}
+
+/* Collapsed sidebar */
+#sidenav-main.collapsed {
+  width: 80px;
+}
+
+#sidenav-main.collapsed + #panel {
+  margin-left: 80px;
+}
+</style>
+
+
+
   {% block stylesheets %}
 
   {% endblock stylesheets %}
@@ -84,5 +108,7 @@
   {% endblock javascripts %}
 
 </body>
+
+
 
 </html>
