--- a/apps/templates/home/edit.html
+++ b/apps/templates/home/edit.html
@@ -1290,7 +1290,7 @@ label.form-control-label{
                                 <th scope="col" style="width: 90px">ANTIBIOTIC</th>
                                 <th scope="col" style="width: 90px">WHONET CODE</th>
                                 <th scope="col" style="text-align: end; width: 98px;">TEST METHOD</th>
-                                <th scope="col" style="text-align: end; width: 98px;">Operand|Result</th>
+                                <th scope="col" style="text-align: end; width: 98px;">Operand|Result </th>
                                 <th scope="col" style="text-align: end; width: 98px;">Alert MIC</th>
                                 <th scope="col" style="text-align: center; width: 98px;">Threshold</th>
                               </tr>
@@ -1684,7 +1684,7 @@ label.form-control-label{
           } else {
             field.disabled = false;
             if (field.value === defaultValue) {
-              setDropdownValue(field, "");  // Reset to blank
+              // setDropdownValue(field, "");  // Reset to blank
             }
           }
         });
@@ -1735,7 +1735,6 @@ label.form-control-label{
     ]);
   });
 </script>
-
 
 
 <script>
@@ -1833,6 +1832,7 @@ label.form-control-label{
 
 
 </script>
+
 
 
 <!-- <script>
